; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_lightv.c_VL_SubdivideAreaLight.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_lightv.c_VL_SubdivideAreaLight.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_19__ = type { float, float*, %struct.TYPE_20__*, i32*, i32, i32, i32, i32*, i32*, %struct.TYPE_17__ }
%struct.TYPE_20__ = type { float, float*, i32, i32, i32 }
%struct.TYPE_17__ = type { i32, i32 }
%struct.TYPE_18__ = type { i32, i32 }

@ON_EPSILON = common dso_local global i32 0, align 4
@qfalse = common dso_local global i64 0, align 8
@LIGHT_POINTFAKESURFACE = common dso_local global i32 0, align 4
@lightAreaScale = common dso_local global float 0.000000e+00, align 4
@lightFormFactorValueScale = common dso_local global float 0.000000e+00, align 4
@CONTENTS_FOG = common dso_local global i32 0, align 4
@qtrue = common dso_local global i32 0, align 4
@vlights = common dso_local global %struct.TYPE_19__** null, align 8
@numvlights = common dso_local global i32 0, align 4
@LIGHT_POINTRADIAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VL_SubdivideAreaLight(%struct.TYPE_20__* %0, %struct.TYPE_18__* %1, float* %2, float %3, i64 %4) #0 {
  %6 = alloca %struct.TYPE_20__*, align 8
  %7 = alloca %struct.TYPE_18__*, align 8
  %8 = alloca float*, align 8
  %9 = alloca float, align 4
  %10 = alloca i64, align 8
  %11 = alloca float, align 4
  %12 = alloca float, align 4
  %13 = alloca float, align 4
  %14 = alloca %struct.TYPE_19__*, align 8
  %15 = alloca %struct.TYPE_19__*, align 8
  %16 = alloca float*, align 8
  %17 = alloca float*, align 8
  %18 = alloca i32, align 4
  %19 = alloca %struct.TYPE_18__*, align 8
  %20 = alloca %struct.TYPE_18__*, align 8
  %21 = alloca float*, align 8
  %22 = alloca float, align 4
  store %struct.TYPE_20__* %0, %struct.TYPE_20__** %6, align 8
  store %struct.TYPE_18__* %1, %struct.TYPE_18__** %7, align 8
  store float* %2, float** %8, align 8
  store float %3, float* %9, align 4
  store i64 %4, i64* %10, align 8
  %23 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %24 = icmp ne %struct.TYPE_18__* %23, null
  br i1 %24, label %26, label %25

25:                                               ; preds = %5
  br label %268

26:                                               ; preds = %5
  %27 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %28 = load float*, float** %16, align 8
  %29 = load float*, float** %17, align 8
  %30 = call i32 @WindingBounds(%struct.TYPE_18__* %27, float* %28, float* %29)
  store i32 0, i32* %18, align 4
  br label %31

31:                                               ; preds = %87, %26
  %32 = load i32, i32* %18, align 4
  %33 = icmp slt i32 %32, 3
  br i1 %33, label %34, label %90

34:                                               ; preds = %31
  %35 = load float*, float** %17, align 8
  %36 = load i32, i32* %18, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds float, float* %35, i64 %37
  %39 = load float, float* %38, align 4
  %40 = load float*, float** %16, align 8
  %41 = load i32, i32* %18, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds float, float* %40, i64 %42
  %44 = load float, float* %43, align 4
  %45 = fsub float %39, %44
  %46 = load float, float* %9, align 4
  %47 = fcmp ogt float %45, %46
  br i1 %47, label %48, label %86

48:                                               ; preds = %34
  %49 = load float*, float** %21, align 8
  %50 = call i32 @VectorClear(float* %49)
  %51 = load float*, float** %21, align 8
  %52 = load i32, i32* %18, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds float, float* %51, i64 %53
  store float 1.000000e+00, float* %54, align 4
  %55 = load float*, float** %17, align 8
  %56 = load i32, i32* %18, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds float, float* %55, i64 %57
  %59 = load float, float* %58, align 4
  %60 = load float*, float** %16, align 8
  %61 = load i32, i32* %18, align 4
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds float, float* %60, i64 %62
  %64 = load float, float* %63, align 4
  %65 = fadd float %59, %64
  %66 = fpext float %65 to double
  %67 = fmul double %66, 5.000000e-01
  %68 = fptrunc double %67 to float
  store float %68, float* %22, align 4
  %69 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %70 = load float*, float** %21, align 8
  %71 = load float, float* %22, align 4
  %72 = load i32, i32* @ON_EPSILON, align 4
  %73 = call i32 @ClipWindingEpsilon(%struct.TYPE_18__* %69, float* %70, float %71, i32 %72, %struct.TYPE_18__** %19, %struct.TYPE_18__** %20)
  %74 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %75 = load %struct.TYPE_18__*, %struct.TYPE_18__** %19, align 8
  %76 = load float*, float** %8, align 8
  %77 = load float, float* %9, align 4
  %78 = load i64, i64* @qfalse, align 8
  call void @VL_SubdivideAreaLight(%struct.TYPE_20__* %74, %struct.TYPE_18__* %75, float* %76, float %77, i64 %78)
  %79 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %80 = load %struct.TYPE_18__*, %struct.TYPE_18__** %20, align 8
  %81 = load float*, float** %8, align 8
  %82 = load float, float* %9, align 4
  %83 = load i64, i64* @qfalse, align 8
  call void @VL_SubdivideAreaLight(%struct.TYPE_20__* %79, %struct.TYPE_18__* %80, float* %81, float %82, i64 %83)
  %84 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %85 = call i32 @FreeWinding(%struct.TYPE_18__* %84)
  br label %268

86:                                               ; preds = %34
  br label %87

87:                                               ; preds = %86
  %88 = load i32, i32* %18, align 4
  %89 = add nsw i32 %88, 1
  store i32 %89, i32* %18, align 4
  br label %31

90:                                               ; preds = %31
  %91 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %92 = call float @WindingArea(%struct.TYPE_18__* %91)
  store float %92, float* %11, align 4
  %93 = load float, float* %11, align 4
  %94 = fcmp ole float %93, 0.000000e+00
  br i1 %94, label %98, label %95

95:                                               ; preds = %90
  %96 = load float, float* %11, align 4
  %97 = fcmp ogt float %96, 2.000000e+07
  br i1 %97, label %98, label %99

98:                                               ; preds = %95, %90
  br label %268

99:                                               ; preds = %95
  %100 = call %struct.TYPE_19__* @malloc(i32 72)
  store %struct.TYPE_19__* %100, %struct.TYPE_19__** %14, align 8
  %101 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %102 = call i32 @memset(%struct.TYPE_19__* %101, i32 0, i32 72)
  %103 = load i32, i32* @LIGHT_POINTFAKESURFACE, align 4
  %104 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %105 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %104, i32 0, i32 5
  store i32 %103, i32* %105, align 4
  %106 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %107 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %108 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %107, i32 0, i32 4
  %109 = load i32, i32* %108, align 8
  %110 = call i32 @WindingCenter(%struct.TYPE_18__* %106, i32 %109)
  %111 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %112 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %111, i32 0, i32 9
  %113 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %112, i32 0, i32 1
  %114 = load i32, i32* %113, align 4
  %115 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %116 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %115, i32 0, i32 1
  %117 = load i32, i32* %116, align 4
  %118 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %119 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %118, i32 0, i32 0
  %120 = load i32, i32* %119, align 4
  %121 = sext i32 %120 to i64
  %122 = mul i64 8, %121
  %123 = trunc i64 %122 to i32
  %124 = call i32 @memcpy(i32 %114, i32 %117, i32 %123)
  %125 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %126 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %125, i32 0, i32 0
  %127 = load i32, i32* %126, align 4
  %128 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %129 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %128, i32 0, i32 9
  %130 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %129, i32 0, i32 0
  store i32 %127, i32* %130, align 8
  %131 = load float*, float** %8, align 8
  %132 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %133 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %132, i32 0, i32 7
  %134 = load i32*, i32** %133, align 8
  %135 = call i32 @VectorCopy(float* %131, i32* %134)
  %136 = load float*, float** %8, align 8
  %137 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %138 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %137, i32 0, i32 8
  %139 = load i32*, i32** %138, align 8
  %140 = call i32 @VectorCopy(float* %136, i32* %139)
  %141 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %142 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %141, i32 0, i32 4
  %143 = load i32, i32* %142, align 8
  %144 = load float*, float** %8, align 8
  %145 = call i32 @DotProduct(i32 %143, float* %144)
  %146 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %147 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %146, i32 0, i32 8
  %148 = load i32*, i32** %147, align 8
  %149 = getelementptr inbounds i32, i32* %148, i64 3
  store i32 %145, i32* %149, align 4
  %150 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %151 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %150, i32 0, i32 0
  %152 = load float, float* %151, align 8
  store float %152, float* %12, align 4
  %153 = load float, float* %12, align 4
  %154 = load float, float* %11, align 4
  %155 = fmul float %153, %154
  %156 = load float, float* @lightAreaScale, align 4
  %157 = fmul float %155, %156
  store float %157, float* %13, align 4
  %158 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %159 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %158, i32 0, i32 4
  %160 = load i32, i32* %159, align 8
  %161 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %162 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %161, i32 0, i32 7
  %163 = load i32*, i32** %162, align 8
  %164 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %165 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %164, i32 0, i32 4
  %166 = load i32, i32* %165, align 8
  %167 = call i32 @VectorAdd(i32 %160, i32* %163, i32 %166)
  %168 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %169 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %168, i32 0, i32 1
  %170 = load float*, float** %169, align 8
  %171 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %172 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %171, i32 0, i32 3
  %173 = load i32*, i32** %172, align 8
  %174 = call i32 @VectorCopy(float* %170, i32* %173)
  %175 = load float, float* %13, align 4
  %176 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %177 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %176, i32 0, i32 0
  store float %175, float* %177, align 8
  %178 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %179 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %178, i32 0, i32 1
  %180 = load float*, float** %179, align 8
  %181 = load float, float* %12, align 4
  %182 = load float, float* @lightFormFactorValueScale, align 4
  %183 = fmul float %181, %182
  %184 = load float, float* @lightAreaScale, align 4
  %185 = fmul float %183, %184
  %186 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %187 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %186, i32 0, i32 1
  %188 = load float*, float** %187, align 8
  %189 = call i32 @VectorScale(float* %180, float %185, float* %188)
  %190 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %191 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %190, i32 0, i32 1
  %192 = load float*, float** %191, align 8
  %193 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %194 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %193, i32 0, i32 3
  %195 = load i32*, i32** %194, align 8
  %196 = call i32 @VectorCopy(float* %192, i32* %195)
  %197 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %198 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %199 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %198, i32 0, i32 2
  store %struct.TYPE_20__* %197, %struct.TYPE_20__** %199, align 8
  %200 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %201 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %200, i32 0, i32 2
  %202 = load i32, i32* %201, align 8
  %203 = load i32, i32* @CONTENTS_FOG, align 4
  %204 = and i32 %202, %203
  %205 = icmp ne i32 %204, 0
  br i1 %205, label %206, label %210

206:                                              ; preds = %99
  %207 = load i32, i32* @qtrue, align 4
  %208 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %209 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %208, i32 0, i32 6
  store i32 %207, i32* %209, align 8
  br label %210

210:                                              ; preds = %206, %99
  %211 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %212 = load %struct.TYPE_19__**, %struct.TYPE_19__*** @vlights, align 8
  %213 = load i32, i32* @numvlights, align 4
  %214 = add nsw i32 %213, 1
  store i32 %214, i32* @numvlights, align 4
  %215 = sext i32 %213 to i64
  %216 = getelementptr inbounds %struct.TYPE_19__*, %struct.TYPE_19__** %212, i64 %215
  store %struct.TYPE_19__* %211, %struct.TYPE_19__** %216, align 8
  %217 = load i64, i64* %10, align 8
  %218 = icmp ne i64 %217, 0
  br i1 %218, label %219, label %268

219:                                              ; preds = %210
  %220 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %221 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %220, i32 0, i32 3
  %222 = load i32, i32* %221, align 4
  %223 = icmp sgt i32 %222, 0
  br i1 %223, label %224, label %268

224:                                              ; preds = %219
  %225 = call %struct.TYPE_19__* @malloc(i32 72)
  store %struct.TYPE_19__* %225, %struct.TYPE_19__** %15, align 8
  %226 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %227 = call i32 @memset(%struct.TYPE_19__* %226, i32 0, i32 72)
  %228 = load i32, i32* @LIGHT_POINTRADIAL, align 4
  %229 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %230 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %229, i32 0, i32 5
  store i32 %228, i32* %230, align 4
  %231 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %232 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %231, i32 0, i32 4
  %233 = load i32, i32* %232, align 8
  %234 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %235 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %234, i32 0, i32 4
  %236 = load i32, i32* %235, align 8
  %237 = load float*, float** %8, align 8
  %238 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %239 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %238, i32 0, i32 4
  %240 = load i32, i32* %239, align 8
  %241 = call i32 @VectorMA(i32 %233, i32 %236, float* %237, i32 %240)
  %242 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %243 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %242, i32 0, i32 1
  %244 = load float*, float** %243, align 8
  %245 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %246 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %245, i32 0, i32 3
  %247 = load i32*, i32** %246, align 8
  %248 = call i32 @VectorCopy(float* %244, i32* %247)
  %249 = load %struct.TYPE_19__*, %struct.TYPE_19__** %14, align 8
  %250 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %249, i32 0, i32 0
  %251 = load float, float* %250, align 8
  %252 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %253 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %252, i32 0, i32 3
  %254 = load i32, i32* %253, align 4
  %255 = sitofp i32 %254 to float
  %256 = fmul float %251, %255
  %257 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %258 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %257, i32 0, i32 0
  store float %256, float* %258, align 8
  %259 = load %struct.TYPE_20__*, %struct.TYPE_20__** %6, align 8
  %260 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %261 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %260, i32 0, i32 2
  store %struct.TYPE_20__* %259, %struct.TYPE_20__** %261, align 8
  %262 = load %struct.TYPE_19__*, %struct.TYPE_19__** %15, align 8
  %263 = load %struct.TYPE_19__**, %struct.TYPE_19__*** @vlights, align 8
  %264 = load i32, i32* @numvlights, align 4
  %265 = add nsw i32 %264, 1
  store i32 %265, i32* @numvlights, align 4
  %266 = sext i32 %264 to i64
  %267 = getelementptr inbounds %struct.TYPE_19__*, %struct.TYPE_19__** %263, i64 %266
  store %struct.TYPE_19__* %262, %struct.TYPE_19__** %267, align 8
  br label %268

268:                                              ; preds = %25, %48, %98, %224, %219, %210
  ret void
}

declare dso_local i32 @WindingBounds(%struct.TYPE_18__*, float*, float*) #1

declare dso_local i32 @VectorClear(float*) #1

declare dso_local i32 @ClipWindingEpsilon(%struct.TYPE_18__*, float*, float, i32, %struct.TYPE_18__**, %struct.TYPE_18__**) #1

declare dso_local i32 @FreeWinding(%struct.TYPE_18__*) #1

declare dso_local float @WindingArea(%struct.TYPE_18__*) #1

declare dso_local %struct.TYPE_19__* @malloc(i32) #1

declare dso_local i32 @memset(%struct.TYPE_19__*, i32, i32) #1

declare dso_local i32 @WindingCenter(%struct.TYPE_18__*, i32) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1

declare dso_local i32 @VectorCopy(float*, i32*) #1

declare dso_local i32 @DotProduct(i32, float*) #1

declare dso_local i32 @VectorAdd(i32, i32*, i32) #1

declare dso_local i32 @VectorScale(float*, float, float*) #1

declare dso_local i32 @VectorMA(i32, i32, float*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
